--- a/Responsive Web Design/p15-5_css-transform_penguin/style.css
+++ b/Responsive Web Design/p15-5_css-transform_penguin/style.css
@@ -1,6 +1,7 @@
 :root {
     --penguin-face: white;
     --penguin-picorna: orange;
+    --penguin-skin: gray;
 }
 
 body {
@@ -36,7 +37,7 @@ body {
 .penguin-head {
     width: 50%;
     height: 45%;
-    background: linear-gradient(45deg, gray, rgb(239, 240, 228));
+    background: linear-gradient(45deg, var(--penguin-skin), rgb(239, 240, 228));
     border-radius: 70% 70% 65% 65%;
     top: 10%;
     left: 25%;
@@ -156,11 +157,34 @@ body {
     position: absolute;
     width: 50%;
     height: 45%;
-    background-color: gray;
+    background-color: var(--penguin-skin);
     top: 10%;
     left: 25%;
     border-radius: 0% 0% 100% 100%;
     opacity: 70%;
+}
+
+.arm {
+    width: 30%;
+    height: 60%;
+    background: linear-gradient(90deg, var(--penguin-skin), rgb(209, 210, 199));
+    border-radius: 30% 30% 30% 120%;
+    z-index: -1;
+}
+
+.arm.left {
+    top: 35%;
+    left: 5%;
+    transform-origin: top left;
+    transform: rotate(130deg) scaleX(-1);
+    /* To keep the linear gradient on the correct side of the penguin's left arm, first rotate it by 130deg, then invert the x-axis. */
+    animation: wave 3s infinite linear;
+}
+
+.arm.right {
+    top: 0%;
+    right: -5%;
+    transform: rotate(-45deg);
 }
 
 .foot {
@@ -169,6 +193,7 @@ body {
     background-color: var(--penguin-picorna);
     top: 85%;
     border-radius: 50%;
+    z-index: -1;
 }
 
 .foot.left {
@@ -210,4 +235,21 @@ body {
     border-radius: 50%;
     top: -75px;
     right: -75px;
+}
+
+@keyframes wave {
+    10%{
+        transform: rotate(110deg) scaleX(-1);
+
+    }
+    20%{
+        transform: rotate(130deg) scaleX(-1);
+    }
+    30%{
+        transform: rotate(110deg) scaleX(-1);
+    }
+    40%{
+        transform: rotate(130deg) scaleX(-1);
+    }
+    
 }
