add final settings

--- a/Responsive Web Design/p15-5_css-transform_penguin/style.css
+++ b/Responsive Web Design/p15-5_css-transform_penguin/style.css
@@ -20,6 +20,7 @@ body {
     z-index: 3;
     position: absolute;
     margin-top: -58px;
+    height: calc(100vh - 300px);
 }
 
 .penguin {
@@ -28,10 +29,16 @@ body {
     margin: 75px auto 0;
     z-index: 4;
     position: relative;
+    transition: 1s ease-in-out 0ms;
 }
 
 .penguin * {
     position: absolute;
+}
+
+.penguin:active {
+    transform: scale(1.5);
+    cursor: not-allowed;
 }
 
 .penguin-head {
